--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-setup",
-  "version": "1.0.0",
+  "name": "starting-redux",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,10 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.5",
-    "redux": "^3.0.5"
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "^3.0.5",
+    "redux-actions": "^0.9.0",
+    "webpack-dev-server": "^1.14.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
