--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "author": "Felipe Apostol <flipjs.io@gmail.com> (http://flipjs.io/)",
   "license": "MIT",
   "dependencies": {
-    "material-ui": "^0.14.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
-    "react-redux": "^4.0.5",
-    "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.5",
+    "react-redux": "^4.0.5",
     "redux-actions": "^0.9.0",
-    "webpack-dev-server": "^1.14.0"
+    "material-ui": "^0.14.0",
+    "react-tap-event-plugin": "^0.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
@@ -27,6 +26,7 @@
     "babel-preset-stage-2": "^6.3.13",
     "deep-freeze": "0.0.1",
     "expect": "^1.13.4",
-    "webpack": "^1.12.9"
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
