--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "Felipe Apostol <flipjs.io@gmail.com> (http://flipjs.io/)",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "redux": "^3.0.5",
-    "react-redux": "^4.0.5",
-    "redux-actions": "^0.9.0",
     "material-ui": "^0.14.0",
-    "react-tap-event-plugin": "^0.2.1"
+    "react": "^0.14.5",
+    "react-dom": "^0.14.5",
+    "react-redux": "^4.0.5",
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "^3.0.5",
+    "redux-actions": "^0.9.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
