tidy up package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starting-redux",
+  "name": "React-Redux-Boilerplate",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -18,14 +18,12 @@
     "redux-actions": "^0.9.0"
   },
   "devDependencies": {
-    "babel-core": "^6.3.21",
+    "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
-    "deep-freeze": "0.0.1",
-    "expect": "^1.13.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
