--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "Felipe Apostol <flipjs.io@gmail.com> (http://flipjs.io/)",
   "license": "MIT",
   "dependencies": {
+    "history": "^1.17.0",
     "material-ui": "^0.14.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
     "react-redux": "^4.0.5",
+    "react-router": "^1.0.3",
     "react-tap-event-plugin": "^0.2.1",
     "redux": "^3.0.5",
-    "redux-actions": "^0.9.0"
+    "redux-actions": "^0.9.0",
+    "redux-simple-router": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
